--- a/src/pages/post/post.scss
+++ b/src/pages/post/post.scss
@@ -1,3 +1,19 @@
 page-post {
+    .icon-selector{
+        font-size: 25px;
+    }
 
+    .toolbar {
+        padding: 15px;
+    }
+
+    .btn-post {
+        font-size: 18px !important;
+        padding: 17px 10px !important;
+    }
+
+    .post-content > .item-inner {
+        border-bottom: none !important;
+    }
 }
+
